# UVRefine

./: .cproject  .project
Debug/: makefile  objects.mk
Debug/src/: subdir.mk
Release/: makefile
Release/src/: subdir.mk
src/: CMakeLists.txt  ImageRgba.h  IndexLocalConversion.h  Normal2UV.cpp  ReadExr.h  UV2Normal.cpp  main.cpp  uvConvert.h  uvConvert_unitTest.cpp
test/: MakeImages.nk  SHDiffuse3Light.exr  SHDiffuse3Light_600x300_02.exr  SHDiffuseLight_Full_01.exr  SHDiffuseLight_Full_02.exr  SphereLit.exr  SphereLit1.exr  SphereLit2.exr  Studio-bluebox1000x500.exr  Studio-bluebox600x300.exr  UVGroundTruth.exr  UVStartFromFlat.exr  run.sh
test/FS_100x50/: run.sh
test/NWFS_100x50/: run.sh
